adding a date picker to the home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   #one_clock: ^1.0.7
   slide_digital_clock: ^1.0.3
+  date_picker_timeline:
 
 dev_dependencies:
   flutter_test:
