add packages 1-provider: ^6.0.2 , 2-image_picker:^0.8.5+3 , 3-path_provider: ^2.0.8 , update minSDK to 21 ,adding camera screen...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   #one_clock: ^1.0.7
   slide_digital_clock: ^1.0.3
   date_picker_timeline:
+  provider: ^6.0.2
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.8
 
 dev_dependencies:
   flutter_test:
