--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.2
   image_picker: ^0.8.5+3
   path_provider: ^2.0.8
+  table_calendar: ^3.0.7
 
 dev_dependencies:
   flutter_test:
