--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^0.8.5+3
   path_provider: ^2.0.8
   table_calendar: ^3.0.7
+  http: ^0.13.2
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
