--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,14 @@ dependencies:
   table_calendar: ^3.0.7
   http: ^0.13.2
   shared_preferences: ^2.0.7
+  #firebase_analytics: ^9.0.0
+  firebase_core: ^2.1.0
+  #firebase_auth: ^4.0.2
+  #cloud_firestore: ^4.3.2
+  firebase_messaging: ^14.0.0
+  #flutter_local_notifications:
+  #awesome_notifications: ^0.0.6+5 
+  awesome_notifications: ^0.7.4+1
 
 dev_dependencies:
   flutter_test:
