--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   shared_preferences: ^2.0.7
   #firebase_analytics: ^9.0.0
   firebase_core: ^2.1.0
-  #firebase_auth: ^4.0.2
-  #cloud_firestore: ^4.3.2
+  firebase_auth: ^4.0.2
+  cloud_firestore: ^4.4.2
   firebase_messaging: ^14.0.0
   #flutter_local_notifications:
   #awesome_notifications: ^0.0.6+5 
