--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   #flutter_local_notifications:
   #awesome_notifications: ^0.0.6+5 
   awesome_notifications: ^0.7.4+1
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
