--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,9 @@ dependencies:
   awesome_notifications: ^0.7.4+1
   #awesome_notifications: ^0.7.4
   intl: ^0.17.0
-  
+  pdf: ^3.6.0
+  flutter_pdfview: ^1.1.0
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
