complete flutter project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   slide_digital_clock: ^1.0.3
   date_picker_timeline:
   provider: ^6.0.2
-  image_picker: ^0.8.5+3
+  #image_picker: ^0.8.5+3
+  image_picker: ^0.8.7
   path_provider: ^2.0.8
   table_calendar: ^3.0.7
   http: ^0.13.2
@@ -58,6 +59,9 @@ dependencies:
   flutter_pdfview: ^1.1.0
   open_file: ^3.2.1
   fluttertoast: ^8.0.7
+  timeago: ^3.4.0
+  http_parser: ^4.0.1
+  dio: ^5.1.2
 
 dev_dependencies:
   flutter_test:
